--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-cors-headers==4.6.0
 django-js-asset==2.2.0
 djangorestframework==3.15.2
 Markdown==3.7
+psycopg2-binary==2.9.10
 python-dotenv==1.0.1
 sqlparse==0.5.1
 typing_extensions==4.12.2
