--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,11 +20,13 @@ services:
       context: .
       dockerfile: Dockerfile
 
-  static:
+  nginx:
     image: nginx:stable-alpine
-    container_name: static_server
+    container_name: nginx_proxy
     volumes:
-      - ./static:/usr/share/nginx/html:ro
+      - ./static:/usr/share/nginx/html:ro # Serve static files
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro # Custom Nginx configuration
     ports:
-      - "8080:80"
-    command: ["nginx", "-g", "daemon off;"]
+      - "80:80" # Expose Nginx on port 80
+    depends_on:
+      - app
