--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     image: python:3.11-slim
@@ -16,17 +14,12 @@ services:
     environment:
       - PYTHONDONTWRITEBYTECODE=1
       - PYTHONUNBUFFERED=1
-    build:
-      context: .
-      dockerfile: Dockerfile
-
-  nginx:
+  static:
     image: nginx:stable-alpine
-    container_name: nginx_proxy
+    container_name: static_server
     volumes:
-      - ./static:/usr/share/nginx/html:ro # Serve static files
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro # Custom Nginx configuration
+      - ./static:/usr/share/nginx/html:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
-      - "80:80" # Expose Nginx on port 80
-    depends_on:
-      - app
+      - "8080:80"
+    command: ["nginx", "-g", "daemon off;"]
