--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   app:
-    image: python:3.11-slim
+    build: .
     container_name: django_app
     working_dir: /app
     volumes:
@@ -9,11 +9,12 @@ services:
       - "8000:8000"
     stdin_open: true
     tty: true
-    command: >
-      sh -c "python manage.py runserver 0.0.0.0:8000"
     environment:
       - PYTHONDONTWRITEBYTECODE=1
       - PYTHONUNBUFFERED=1
+    command: >
+      sh -c "python manage.py collectstatic --noinput && python manage.py runserver 0.0.0.0:8000"
+
   static:
     image: nginx:stable-alpine
     container_name: static_server
