--- a/nginx.conf
+++ b/nginx.conf
@@ -18,5 +18,12 @@ http {
         location / {
             return 404;
         }
+	
+        types {
+            text/css css;
+            application/javascript js;
+        }
+
+
     }
 }
