--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ space-server.pem
 __pycache__/
 
 # Ignore Django migration cache files
-app/migrations/
+app/migrations
 
 # Do NOT ignore actual migration files!
 # Uncomment the next line ONLY if you want to ignore ALL migrations (not recommended)
