--- a/nginx.conf
+++ b/nginx.conf
@@ -1,29 +1,29 @@
 events {}
 
 http {
-    server {
-        listen 80;
-        server_name _;
 
-        # Static files location
-        location /static/ {
-            alias /usr/share/nginx/html/;
-            autoindex on;  
-        }
+server {
+    listen 80;
+    server_name your_domain.com;
 
-        # Optional: Logging
-        access_log /var/log/nginx/access.log;
-        error_log /var/log/nginx/error.log;
+    location / {
+        proxy_pass http://app:8000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-CSRFToken $http_x_csrf_token;
+    }
 
-        location / {
-            return 404;
-        }
-	
-        types {
+    location /static/ {
+        alias /usr/share/nginx/html/;
+        autoindex on;  
+    }
+
+    types {
             text/css css;
             application/javascript js;
         }
-
-
-    }
 }
+}
+
