--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,15 @@ services:
     environment:
       - PYTHONDONTWRITEBYTECODE=1
       - PYTHONUNBUFFERED=1
-  static:
+
+  nginx:
     image: nginx:stable-alpine
-    container_name: static_server
+    container_name: nginx_server
     volumes:
       - ./static:/usr/share/nginx/html:ro
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
       - "8080:80"
+    depends_on:
+      - app
     command: ["nginx", "-g", "daemon off;"]
