--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 Django==5.1.2
 django-cors-headers==4.6.0
+django-environ==0.12.0
 django-js-asset==2.2.0
 djangorestframework==3.15.2
 Markdown==3.7
